phase 4: Add numpy as core dependency for plotly
Plotly requires numpy even when not using plotly.express.
Moved from optional ml dependencies to core dependencies.

[SDP-1] code-wrapped

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pillow>=10.0",
     "plotly>=5.15",
     "kaleido>=0.2",  # For plotly image export
+    "numpy>=1.24",   # Required by plotly
 ]
 
 [project.optional-dependencies]
